# ha-drone-mobile

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  hacs.json  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yaml  release.yaml
custom_components/drone_mobile/: __init__.py  binary_sensor.py  button.py  config_flow.py  const.py  coordinator.py  device_tracker.py  entity.py  lock.py  manifest.json  sensor.py  service_sensor.py  strings.json  switch.py
custom_components/drone_mobile/translations/: en.json
tests/: conftest.py  test_config_flow.py  test_const.py  test_coordinator.py  test_sensor.py  test_service_intervals.py
